fixing github issues

--- a/src/main/resources/assets/LetsModReboot/lang/en_US.lang
+++ b/src/main/resources/assets/LetsModReboot/lang/en_US.lang
@@ -1,1 +1,5 @@
+#   Items
 item.letsmodreboot:mapleLeaf.name=Maple Leaf of Awesomeness
+
+#   Blocks
+tile.letsmodreboog:flag.name=Canadian Flag of Awesomeness
