--- a/src/main/resources/assets/LetsModReboot/lang/en_US.lang
+++ b/src/main/resources/assets/LetsModReboot/lang/en_US.lang
@@ -2,4 +2,4 @@
 item.letsmodreboot:mapleLeaf.name=Maple Leaf of Awesomeness
 
 #   Blocks
-tile.letsmodreboog:flag.name=Canadian Flag of Awesomeness
+tile.letsmodreboot:flag.name=Canadian Flag of Awesomeness
