added Custom Creative Tab.

--- a/src/main/resources/assets/letsmodreboot/lang/en_US.lang
+++ b/src/main/resources/assets/letsmodreboot/lang/en_US.lang
@@ -3,3 +3,6 @@ item.letsmodreboot:mapleLeaf.name=Maple Leaf of Awesomeness
 
 #   Blocks
 tile.letsmodreboot:flag.name=Canadian Flag of Awesomeness
+
+#   Creative Tabs
+itemGroup.letsmodreboot=Let's Mod Reboot
