--- a/src/main/resources/assets/letsmodreboot/lang/en_US.lang
+++ b/src/main/resources/assets/letsmodreboot/lang/en_US.lang
@@ -1,3 +1,8 @@
+#   Keys
+keys.letsmodreboot.category=Let's Mod Reboot
+keys.letsmodreboot.charge=Charge
+keys.letsmodreboot.release=Release
+
 #   Items
 item.letsmodreboot:mapleLeaf.name=Maple Leaf of Awesomeness
 
